# rust-timer

./: Cargo.toml  db.sqlite
src/: main.rs  timer.rs
tui/: TODO.md  main.rs
