[package]
name = "rust-timer"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
dirs = "5.0.1"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
user-idle = "0.6.0"
