[package]
name = "rust-timer"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "timer"
path = "src/main.rs"

[[bin]]
name = "tui"
path = "tui/main.rs"

[dependencies]
chrono = "0.4.35"
crossterm = "0.28.1"
ratatui = "0.29.0"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
user-idle = "0.6.0"
